src/objects/HTB_Reporting_Static__c.object
<CustomObject>
    <fields>
        <fullName>Action_Code__c</fullName>
        <description>&quot;Add (A)
Change (C)
Delete (D)

Data supplied to be capitalised.&quot;</description>
        <label>Action Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_or_IVA_Flag__c</fullName>
        <label>Bankruptcy or IVA Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Year__c</fullName>
        <label>Construction Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HTB Reporting Static</relationshipLabel>
        <relationshipName>HTB_Reporting_Statics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERC_End_Date__c</fullName>
        <label>ERC End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flexible_Features_flag__c</fullName>
        <label>Flexible Features flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTB_Reporting_Month__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The month in which the Static data was created.</description>
        <inlineHelpText>The month in which the Static data was created.</inlineHelpText>
        <label>HTB Reporting Month</label>
        <referenceTo>HTB_Reporting_Month__c</referenceTo>
        <relationshipLabel>New HTB Reporting Statics</relationshipLabel>
        <relationshipName>HTB_Reporting_Static</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Interest_Rate__c</fullName>
        <label>Initial Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <description>Hard coded to 5</description>
        <label>Interest Rate Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Revision_Date__c</fullName>
        <label>Interest Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <label>Lender</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_term__c</fullName>
        <label>Loan term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Property__c</fullName>
        <label>New Property</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_CCJs_or_equivalent__c</fullName>
        <label>Number of CCJs or equivalent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Loan_Exposure__c</fullName>
        <label>Opening Loan Exposure</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Loan_Value__c</fullName>
        <label>Opening Loan Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Loan_origination_date__c</fullName>
        <label>Opening Loan origination date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HTB Reporting Static</relationshipLabel>
        <relationshipName>HTB_Reporting_Static</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Loan_to_Value__c</fullName>
        <label>Original Loan to Value</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Valuation_Type__c</fullName>
        <label>Original Valuation Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_mortgage_arrears__c</fullName>
        <label>Previous mortgage arrears</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Borrower_Year_of_Birth__c</fullName>
        <label>Primary Borrower Year of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Borrower_gross_income__c</fullName>
        <label>Primary Borrower gross income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Borrower_type__c</fullName>
        <label>Primary Borrower type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_postcode__c</fullName>
        <label>Property postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_type__c</fullName>
        <label>Property type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reversion_rate__c</fullName>
        <label>Reversion rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reversion_type__c</fullName>
        <label>Reversion type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URN_Number__c</fullName>
        <description>Unique Reference Number - the number of the URN.</description>
        <inlineHelpText>Unique Reference Number - the number of the URN.</inlineHelpText>
        <label>URN Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Reference__c</fullName>
        <description>13 digit account with IBB number</description>
        <label>Unique Reference</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_CCJs_or_equivalent__c</fullName>
        <label>Value of CCJs or equivalent</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Borrower_Year_of_Birth__c</fullName>
        <label>2nd Borrower Year of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Borrower_gross_income__c</fullName>
        <label>2nd Borrower gross income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Borrower_Year_of_Birth__c</fullName>
        <label>3rd Borrower Year of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Borrower_gross_income__c</fullName>
        <label>3rd Borrower gross income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4th_Borrower_Year_of_Birth__c</fullName>
        <label>4th Borrower Year of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X4th_Borrower_gross_income__c</fullName>
        <label>4th Borrower gross income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HTB Reporting Static</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Opportunity__c</columns>
        <columns>New_Property__c</columns>
        <columns>Primary_Borrower_gross_income__c</columns>
        <columns>X2nd_Borrower_gross_income__c</columns>
        <columns>Primary_Borrower_type__c</columns>
        <columns>Primary_Borrower_Year_of_Birth__c</columns>
        <columns>X2nd_Borrower_Year_of_Birth__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>HTB Reporting Static Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HTB Reporting Static</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>